fix: password strength bar visible

--- a/src/pages/Register/Register.module.scss
+++ b/src/pages/Register/Register.module.scss
@@ -41,7 +41,7 @@
 }
 
 .passwordStrengthBar {
-  width: 100%;
+  width: 85%;
 }
 
 .error {
